--- a/ZombieRunX/Info.plist
+++ b/ZombieRunX/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Can we have your location data?</string>
+	<string>This allows the app to run while your phone is locked :)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
