--- a/ZombieRunX/Info.plist
+++ b/ZombieRunX/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This allows the app to run while your phone is locked :)</string>
+	<string>This allows the experience to continue while your phone is locked.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
