--- a/ZombieRunX/Info.plist
+++ b/ZombieRunX/Info.plist
@@ -28,6 +28,7 @@
 	<array>
 		<string>audio</string>
 		<string>location</string>
+		<string>voip</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
