--- a/Interactions Build/ZI_interactions.plist
+++ b/Interactions Build/ZI_interactions.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-          <string>https://dl.dropboxusercontent.com/s/ou2ow70zljt7bkq/ZombieRunX.ipa</string>
+          <string>https://dl.dropboxusercontent.com/s/ivjhg7dt1b52s87/ZI_interactions.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>edu.northwestern.delta.ZombieRunX</string>
+				<string>edu.northwestern.delta.Zombies-Interactive</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>ZombieRunX</string>
+				<string>Zombies Interactive</string>
 			</dict>
 		</dict>
 	</array>
