--- a/Zombies Interactive/Info.plist
+++ b/Zombies Interactive/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Zombies Interactive requires access to your phone's location to enhance the experience, even while your phone is locked.</string>
+	<string>Zombies Interactive requires access to your phone&apos;s location to enhance the experience, even while your phone is locked.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
@@ -42,5 +42,10 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
