--- a/Zombies Interactive.xcodeproj/xcshareddata/xcschemes/Zombies Interactive.xcscheme
+++ b/Zombies Interactive.xcodeproj/xcshareddata/xcschemes/Zombies Interactive.xcscheme
@@ -66,7 +66,7 @@
       <AdditionalOptions>
       </AdditionalOptions>
       <LocationScenarioReference
-         identifier = "../../Location.gpx"
+         identifier = "../../arch_run.gpx"
          referenceType = "0">
       </LocationScenarioReference>
    </LaunchAction>
